--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+My fork of dwm-6.2 with couple customizations and patches:
+
+- attachbottom
+- fullgaps
+- autostart
+
+
+
+Content of provided README:
+
 dwm - dynamic window manager
 ============================
 dwm is an extremely fast, small, and dynamic window manager for X.
